--- a/index.html
+++ b/index.html
@@ -1,4 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>alfaQubit Dossier — WKT12</title>
 
+  <!-- External WKT12 stylesheet -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <header>
+    <h1 class="glow">alfaQubit Dossier</h1>
+    <p>Operational Archive • WKT12 Ecosystem</p>
+  </header>
+
+  <!-- Navigation -->
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="module-1.html">Module 1</a>
+    <a href="module-2.html">Module 2</a>
+    <a href="notes.html">Notes</a>
+    <a href="assets/">Assets</a>
+  </nav>
+
+  <div class="container">
+
+    <div class="section">
+      <h2 class="glow">Overview</h2>
+      <p>
+        This dossier contains the alfaQubit operational notes, research modules,
+        and supporting assets. All content is packaged for instant deployment
+        via ai.studio applet hosting and WKT12 global distribution nodes.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2 class="glow">Contents</h2>
+      <ul>
+        <li><a href="assets/">Assets Folder</a></li>
+        <li><a href="module-1.html">Module 1</a></li>
+        <li><a href="module-2.html">Module 2</a></li>
+        <li><a href="notes.html">Operational Notes</a></li>
+      </ul>
+      <p>
+        Add or remove links above depending on your dossier structure.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2 class="glow">About alfaQubit</h2>
+      <p>
+        alfaQubit is a modular intelligence construct within the WKT12
+        architecture. This dossier serves as its public‑facing reference node,
+        optimized for lightweight distribution and global access.
+      </p>
+    </div>
+
+  </div>
+
+  <div class="footer">
+    © WKT12 • alfaQubit • Operational Node
+  </div>
+
+</body>
+</html>
 
 `html
 <iframe
